build_output_cmd.txt
npm WARN config global `--global`, `--local` are deprecated. Use `--location=global` instead.

> frontend@0.0.0 build
> vite build

[33mYou are using Node.js 16.16.0. Vite requires Node.js version 20.19+ or 22.12+. Please upgrade your Node.js version.[39m
file:///C:/Users/Admin/Desktop/myPortfolio/node_modules/vite/dist/node/chunks/config.js:8
import fsp, { constants } from "node:fs/promises";
              ^^^^^^^^^
SyntaxError: The requested module 'node:fs/promises' does not provide an export named 'constants'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:385:24)
    at async CAC.<anonymous> (file:///C:/Users/Admin/Desktop/myPortfolio/node_modules/vite/dist/node/cli.js:626:28)
